# sqlite-graph

./: .gitignore  AGENT.md  CMakeLists.txt  CMakePresets.json  COMPLETION_PLAN.md  CTestConfig.cmake  CTestConfig.cmake.in  IMPLEMENTATION_GAPS.md  MEMORY_HARDENING_SUMMARY.md  Makefile  Makefile.backup_hardening  OpenCode.md  PERFORMANCE_ANALYSIS.md  SELF_REVIEW.md  TCK_ANALYSIS_SUMMARY.md  TCK_COVERAGE_MAPPING.md  TCK_STEP3_COMPLETION_SUMMARY.md  TESTING.md  allocs.txt  ast-generator-plan.md  build_and_test.sh  cmake-to-make-plan.md  compile_commands.json  debug_bestindex.c  debug_count_query  debug_count_query.c  debug_edge_insertion  debug_edge_insertion.c  debug_tables  debug_tables.c  debug_test  explain_count_test  explain_count_test.c  fix-phase-1.md  fix-plan.md  fix_edge_cases.c  fix_extension_init.sh  fix_schema_tests.py  fix_test_setup.py  frees.txt  (+18 more)
.claude/: settings.json
.gemini/: settings.json
.opencode/: opencode.db-shm  opencode.db-wal
analysis_results/: cppcheck.xml
analysis_results/scan-build/2025-07-15-205718-176441-1/: report-22ccf3.html  report-360fd0.html  report-44571a.html  report-476c04.html  report-5a47ca.html  report-642eee.html  report-6e193b.html  report-83dab9.html  report-9d0ee7.html  report-e85596.html  report-f1d502.html  temp_buf_cnxQfu  temp_buf_tJuZa0
analysis_results/scan-build/2025-07-15-205718-176441-1/failures/: clang_other_error_EtGr58.i  clang_other_error_EtGr58.i.info.txt  clang_other_error_TZiG4h.i  clang_other_error_TZiG4h.i.info.txt  clang_other_error_TZiG4h.i.stderr.txt
benchmarks/: Makefile  ldbc_benchmark  ldbc_benchmark.c  memory_profiler  memory_profiler.c  performance_regression  performance_regression.c  scalability_test  scalability_test.c
docs/: TESTING.md  TEST_COVERAGE.md
grammar/: cypher.lemon
include/: cypher-expressions.h  cypher-planner.h  cypher.h  graph-performance.h  graph.h
include/cypher/: cypher-api.h  cypher-ast.h
scripts/: fuzz_test.sh  generate_unity_tests.py  valgrind_test.sh
security_audit/: security_audit_report.md
self_review_verification/: verification_report.md
sqlite-utils-plugin/: pytest.ini
sqlite-utils-plugin/tests/: __init__.py
src/: CMakeLists.txt  Makefile  Makefile.backup_hardening  graph-advanced.c  graph-advanced.c.backup  graph-algo.c  graph-benchmark.c.backup  graph-bulk.c  graph-bulk.c.backup  graph-cache.c  graph-compress.c  graph-destructors.c.backup  graph-enhanced.c  graph-json.c  graph-memory.c.backup  graph-parallel.c  graph-performance.c  graph-performance.c.backup  graph-schema.c  graph-traverse.c  graph-traverse.c.backup  graph-tvf.c.backup  graph-util.c  graph-vtab-hardened.c  graph-vtab-hardened.c.backup  graph-vtab.c  graph-vtab.c.backup  graph-vtab.c.before_edge_fix  graph.c
src/cypher/: cypher-ast.c  cypher-ast.c.backup  cypher-executor-sql.c  cypher-executor.c  cypher-executor.c.backup  cypher-expressions.c  cypher-iterators.c  cypher-lexer.c  cypher-lexer.c.backup  cypher-parser-generated.c  cypher-parser.c  cypher-parser.c.backup  cypher-planner-sql.c  cypher-sql-fixed.c.backup  cypher-sql.c  cypher-storage.c  cypher-write.c
src_backup/: CMakeLists.txt  graph-advanced.c  graph-algo.c  graph-benchmark.c  graph-bulk.c  graph-cache.c  graph-compress.c  graph-enhanced.c  graph-json.c  graph-parallel.c  graph-performance.c  graph-schema.c  graph-traverse.c  graph-tvf.c  graph-util.c  graph-vtab.c  graph.c
src_backup/cypher/: cypher-ast.c  cypher-execution-context.c  cypher-executor-sql.c  cypher-executor.c  cypher-expressions.c  cypher-iterators.c  cypher-lexer.c  cypher-logical-plan.c  cypher-parser-generated.c  cypher-parser.c  cypher-physical-plan.c  cypher-planner-sql.c  cypher-planner.c  cypher-sql.c  cypher-write-sql.c  cypher-write.c
tests/: CMakeLists.txt  IMPLEMENTED_SCENARIOS_SUMMARY.md  Makefile  Makefile.backup  Makefile.backup2  Makefile.backup3  Makefile.tck  TCK_GENERATION_SUMMARY.md  TCK_TESTS_STATUS_FIXED.md  TESTING_COMPLETE_SUMMARY.md  TEST_COVERAGE_SUMMARY.md  comprehensive_test_runner.sh  coverage.json  debug_create_test  debug_create_test.c  debug_table_schema  debug_table_schema.c  final_test_inventory.csv  fix_all_schemas.py  fix_schema_mismatch.py  fix_update.patch  fix_vtab_filter.py  generate_tck_tests.py  implement_basic_match_scenarios.py  implement_basic_return_scenarios.py  implement_basic_tck_scenarios.py  implement_working_insert_scenarios.py  implement_working_tck_scenarios.py  run_all_tests.sh  simple_string_test.c  simple_tck_test  simple_tck_test.c  simple_test.c  simple_vtab_fix.py  tck_assert.c  tck_assert.h  tck_main.c  tck_test_clauses_call.c  tck_test_clauses_create  tck_test_clauses_create.c  (+88 more)
tests/tck/: compile_tck.sh  tck_features.md  tck_runner.c
